# AIL

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE_TEMPLATE.md  Cargo.toml  GETTING_STARTED.md  MIGRATION.md  NOTICE  README.md  THIRD-PARTY-NOTICES.txt
agents/: CLAUDE.md  Makefile  README.md  ail-agent.spec  main.py  pyproject.toml
agents/ail_agent/: __init__.py  __main__.py  coder.py  errors.py  mcp_toolkit.py  orchestrator.py  plan_format.py  planner.py  progress.py  prompts.py  registry.py  verify.py
agents/ail_agent/providers/: __init__.py  _openai_compat.py  _retry.py  alibaba.py  anthropic.py  base.py  deepseek.py  ollama.py  openai.py
agents/scripts/: ail-agent.cmd  ail-agent.sh  build_sidecar.ps1  build_sidecar.sh
agents/tests/: test_cli_main.py  test_coder.py  test_errors.py  test_frozen_binary.py  test_frozen_binary_smoke.py  test_integration_live.py  test_mcp_toolkit.py  test_orchestrator.py  test_plan_format.py  test_planner.py  test_progress_json.py  test_provider_swap.py  test_providers.py  test_registry.py  test_retry.py  test_verify.py  test_workflow_e2e_mocked.py  test_workflow_e2e_wallet.py
crates/ail-cli/: Cargo.toml
crates/ail-cli/src/: error.rs  lib.rs  main.rs
crates/ail-cli/src/commands/: agent.rs  build.rs  context.rs  coverage.rs  init.rs  migrate.rs  mod.rs  project.rs  reindex.rs  run_cmd.rs  search.rs  serve.rs  status.rs  test_cmd.rs  verify.rs
crates/ail-cli/tests/: agent_config.rs  cli_agent.rs  cli_commands.rs  cli_e2e_wallet_agent.rs  cli_e2e_wallet_coverage.rs  cli_e2e_wallet_sqlite.rs  cli_e2e_wallet_ts.rs  cli_migrate.rs  cli_parse.rs  coverage_cmd.rs  coverage_config.rs  e2e.rs  sheaf_cmd.rs
crates/ail-contract/: Cargo.toml
crates/ail-contract/src/: lib.rs  verify.rs
crates/ail-contract/src/checks/: after_contract.rs  before_contract.rs  following_phases.rs  mod.rs  raise_error.rs  scope.rs
crates/ail-contract/src/errors/: contract_error.rs  contract_stage_error.rs  encode_error.rs  mod.rs  verify_error.rs
crates/ail-contract/src/sheaf/: analyze.rs  builder.rs  mod.rs  scope.rs  tests.rs  types.rs
crates/ail-contract/src/types/: contract_summary.rs  mod.rs  verified_graph.rs
crates/ail-contract/src/z3_encode/: context.rs  encoder.rs  mod.rs  tests.rs  type_constraints.rs
crates/ail-contract/src/z3_verify/: context_builder.rs  mod.rs  node_verifier.rs  obstruction.rs  sort.rs  tests.rs
crates/ail-contract/tests/: pipeline.rs  static_checks.rs  t076_backend_adaptation.rs
crates/ail-coverage/: Cargo.toml
crates/ail-coverage/src/: concepts.rs  coverage.rs  errors.rs  lib.rs  missing.rs  projection.rs  types.rs
crates/ail-coverage/tests/: into_info.rs  t131_coverage_tests.rs  t131_missing_tests.rs  t131_projection_tests.rs
crates/ail-db/: Cargo.toml
crates/ail-db/src/: lib.rs
crates/ail-db/src/db/: backend_impl.rs  cic_cache.rs  coverage.rs  embedding.rs  fts_search.rs  mod.rs  node_serde.rs  schema.rs  sqlite_graph.rs
crates/ail-db/src/errors/: db_error.rs  mod.rs
crates/ail-db/tests/: coverage_cache.rs  invalidation_hooks.rs  sqlite_tests.rs
crates/ail-emit/: Cargo.toml
crates/ail-emit/src/: lib.rs
crates/ail-emit/src/constants/: mod.rs
crates/ail-emit/src/errors/: emit_error.rs  mod.rs
crates/ail-emit/src/python/: constraint.rs  contract_inject.rs  define.rs  describe.rs  emit_functions.rs  emit_types.rs  error.rs  expression_parser.rs  function.rs  mod.rs  scaffold.rs  source_map.rs  statement.rs  test_gen.rs  type_map.rs  using.rs
crates/ail-emit/src/types/: contract_mode.rs  emit_config.rs  emit_output.rs  file_ownership.rs  mod.rs  test_framework.rs
crates/ail-emit/src/typescript/: constraint.rs  contract_inject.rs  define.rs  describe.rs  emit_functions.rs  emit_types.rs  error.rs  fn_name.rs  import_tracker.rs  mod.rs  (+6 more)
crates/ail-emit/tests/: emit_functions.rs  emit_scaffold.rs  emit_types.rs  ts_emit_contracts.rs  ts_emit_functions.rs  ts_emit_tests.rs  ts_emit_types.rs
crates/ail-graph/: Cargo.toml
crates/ail-graph/src/: lib.rs
crates/ail-graph/tests/: backend_tests.rs  cic_check_promotion.rs  cic_engine.rs  cic_path_aware_packets.rs  coverage_info.rs  graph_builder.rs  graph_crud.rs  graph_navigation.rs  serde_roundtrip.rs  validation.rs  wallet_service_fixture.rs
crates/ail-mcp/: Cargo.toml
crates/ail-mcp/src/: context.rs  lib.rs  pipeline.rs  server.rs  transport.rs
crates/ail-mcp/tests/: agent_e2e_wallet.rs  ai_workflow.rs  protocol.rs  review_tool.rs  review_tool_e2e_wallet.rs  tools.rs
crates/ail-runtime-py/: LICENSE  README.md  pyproject.toml
crates/ail-runtime-py/ail_runtime/: __init__.py  contracts.py  repository.py  types.py
crates/ail-runtime-py/tests/: test_contracts.py  test_repository.py  test_types.py
crates/ail-search/: Cargo.toml
crates/ail-search/src/: hybrid.rs  index.rs  lib.rs
crates/ail-search/tests/: embedding_tests.rs  hybrid_tests.rs  provider_config_tests.rs
crates/ail-text/: Cargo.toml
crates/ail-text/src/: grammar.pest  grammar.rs  lib.rs
crates/ail-text/tests/: assembler_edges.rs  full_parse.rs  grammar_smoke.rs  parse_integration.rs  parse_nesting.rs  parse_patterns.rs  parse_synonyms.rs  render.rs  roundtrip.rs
crates/ail-ui-bridge/: Cargo.toml  LICENSE
crates/ail-ui-bridge/examples/: dump_wallet_graph.rs
crates/ail-ui-bridge/src/: agent.rs  commands.rs  errors.rs  events.rs  flowchart.rs  ids.rs  layout.rs  lib.rs  pipeline.rs  reviewer.rs  rollup.rs  save_registry.rs  scaffold.rs  serialize.rs  sheaf.rs  sidecar.rs  tutorial.rs  verifier.rs  watcher.rs
crates/ail-ui-bridge/tests/: agent.rs  errors_tests.rs  externals_classification.rs  fine_grained_patch.rs  flowchart_tests.rs  graph_json_wallet.rs  graph_patch.rs  issues.rs  lens_metrics.rs  load_project_typed.rs  relations_externals.rs  reviewer.rs  scaffold.rs  serde_roundtrip.rs  sheaf.rs  sidecar.rs  status_rollup.rs  tutorial.rs  verifier.rs  watcher.rs
ide/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
ide/src-tauri/binaries/: .gitignore
ide/src-tauri/capabilities/: default.json
ide/src-tauri/src/: lib.rs  main.rs
(+342 files in other folders)
