[workspace]
resolver = "2"
members = [
    "crates/ail-graph",
    "crates/ail-db",
    "crates/ail-types",
    "crates/ail-contract",
    "crates/ail-text",
    "crates/ail-emit",
    "crates/ail-mcp",
    "crates/ail-cli",
    "crates/ail-search",
    "crates/ail-coverage",
    "crates/ail-ui-bridge",
]

[workspace.dependencies]
# graph / data
petgraph     = { version = "0.6", features = ["serde-1"] }
uuid         = { version = "1",   features = ["v4", "serde"] }

# serialization
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"

# errors / diagnostics
thiserror    = "2"
miette       = { version = "7",   features = ["fancy"] }

# contract / Z3
# z3 0.20+ ships static FFI bindings; libclang/bindgen no longer required at build.
# `vendored` builds Z3 4.16 from in-tree z3-src 416.x source via cmake-rs 0.1.58 (VS 2026 compatible).
z3           = { version = "0.20", features = ["vendored"] }

# regex
regex        = "1"

# parser
pest         = "2"
pest_derive  = "2"

# CLI
clap         = { version = "4",   features = ["derive"] }

# internal crates
ail-graph    = { path = "crates/ail-graph" }
ail-db       = { path = "crates/ail-db" }
ail-types    = { path = "crates/ail-types" }
ail-contract = { path = "crates/ail-contract" }
ail-text     = { path = "crates/ail-text" }
ail-emit     = { path = "crates/ail-emit" }
ail-mcp      = { path = "crates/ail-mcp" }
ail-search   = { path = "crates/ail-search" }
ail-coverage = { path = "crates/ail-coverage" }
ail-ui-bridge = { path = "crates/ail-ui-bridge" }
