[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ail-agent"
version = "0.1.0"
description = "AIL v3.0 LangGraph agent layer — orchestrates the Rust MCP pipeline"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PMNhuong", email = "www.nhuong.zzz@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "langgraph==1.1.8",
  "langchain-core==1.3.0",
  "langchain-mcp-adapters==0.2.2",
  "mcp==1.9.2",
  "typing-extensions==4.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["ail_agent"]

[tool.hatch.build.targets.sdist]
include = ["ail_agent", "tests", "pyproject.toml", "CLAUDE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
