[package]
name = "ail-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "ail_cli"
path = "src/lib.rs"

[[bin]]
name = "ail"
path = "src/main.rs"

[dependencies]
ail-graph    = { workspace = true }
ail-types    = { workspace = true }
ail-contract = { workspace = true }
ail-text     = { workspace = true }
ail-emit     = { workspace = true }
ail-mcp      = { workspace = true }
ail-db       = { workspace = true }
clap         = { workspace = true }
thiserror    = { workspace = true }
miette       = { workspace = true }

[dev-dependencies]
tempfile = "3"
