[package]
name = "ail-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "ail_cli"
path = "src/lib.rs"

[[bin]]
name = "ail"
path = "src/main.rs"

[features]
# Enable `ail reindex --embeddings`: loads and runs the local ONNX model to
# build the embedding index stored in `.ail.db`.
embeddings = ["dep:ail-search", "ail-search/embeddings"]

[dependencies]
ail-graph    = { workspace = true }
ail-types    = { workspace = true }
ail-contract = { workspace = true }
ail-text     = { workspace = true }
ail-emit     = { workspace = true }
ail-mcp      = { workspace = true }
ail-db       = { workspace = true }
ail-search   = { workspace = true, optional = true }
clap         = { workspace = true }
thiserror    = { workspace = true }
miette       = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
tempfile = "3"
