[package]
name = "ail-contract"
version = "0.1.0"
license = "BUSL-1.1"
edition = "2021"

[dependencies]
ail-graph = { workspace = true }
ail-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
# z3 0.20+ ships static FFI bindings; libclang/bindgen no longer required at build.
# Enable formal verification with: cargo build --features z3-verify
# (Vendored Z3 4.16.0 source builds via cmake; a working MSVC/clang/gcc toolchain is
# the only remaining build requirement on each platform.)
z3 = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
z3-verify = ["z3"]
