[package]
name    = "ail-coverage"
version = "0.1.0"
license = "BUSL-1.1"
edition = "2021"

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
ail-graph  = { workspace = true }
ail-search = { workspace = true }
log        = "0.4"

[dev-dependencies]
log            = { version = "0.4", features = ["std"] }
testing_logger = "0.1"
