[package]
name = "ail-db"
version = "0.1.0"
license = "BUSL-1.1"
edition = "2021"

[dependencies]
rusqlite  = { version = "0.31", features = ["bundled"] }
uuid      = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ail-graph = { workspace = true }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
