[package]
name = "ail-emit"
version = "0.1.0"
license = "BUSL-1.1"
edition = "2021"

[dependencies]
ail-graph    = { workspace = true }
ail-types    = { workspace = true }
ail-contract = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
