[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ail-runtime"
version = "0.1.0"
description = "AIL runtime library for generated Python code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PMNhuong", email = "www.nhuong.zzz@gmail.com" }]
keywords = ["ail", "contract", "code-generation", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/PMNhuong/ail"
