[package]
name = "ail-search"
version = "0.1.0"
edition = "2021"

[features]
# No default features: trait + error types compile with zero ONNX deps.
default = []
# Enable ONNX-backed local embedding provider.
embeddings = ["dep:ort", "dep:tokenizers"]

[dependencies]
thiserror  = { workspace = true }
ail-graph  = { workspace = true }

# Optional: local ONNX inference (only in ail-search; not a shared workspace dep)
# ort 2.x is still in release-candidate phase; pin to latest rc.
ort        = { version = "=2.0.0-rc.12", features = ["download-binaries"], optional = true }
tokenizers = { version = "0.19", optional = true }
