[package]
name = "ail-text"
version = "0.1.0"
license = "BUSL-1.1"
edition = "2021"

[dependencies]
ail-graph   = { workspace = true }
ail-types   = { workspace = true }
pest        = { workspace = true }
pest_derive = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
ail-contract = { workspace = true }
