[package]
name = "ail-ui-bridge"
version = "0.1.0"
license = "BUSL-1.1"
edition = "2021"

[features]
default = []
tauri-commands = ["dep:tauri"]

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
ail-graph    = { workspace = true }
ail-contract = { workspace = true }
ail-text     = { workspace = true }
ail-types    = { workspace = true }
tauri        = { version = "2", optional = true }

[dev-dependencies]
tempfile     = "3"
ail-graph    = { workspace = true }
