[package]
name = "ail-ui-bridge"
version = "0.1.0"
license = "BUSL-1.1"
edition = "2021"

[features]
default = []
tauri-commands = ["dep:tauri", "dep:notify-debouncer-full", "dep:notify", "dep:log", "dep:tokio"]
z3-verify = ["ail-contract/z3-verify"]

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
ail-graph    = { workspace = true }
ail-contract = { workspace = true }
ail-text     = { workspace = true }
ail-types    = { workspace = true }
tauri        = { version = "2", optional = true }
notify-debouncer-full = { version = "0.3", optional = true }
notify       = { version = "6", optional = true }
log          = { version = "0.4", optional = true }
tokio        = { version = "1", features = ["process", "io-util", "rt-multi-thread", "sync", "macros"], optional = true }

[dev-dependencies]
tempfile     = "3"
ail-graph    = { workspace = true }
tokio        = { version = "1", features = ["process", "io-util", "rt-multi-thread", "sync", "macros", "time"] }
