[workspace]

[package]
name = "ail-ide"
version = "0.4.0"
edition = "2021"
description = "AIL desktop IDE shell (Tauri v2)"
license = "MIT OR Apache-2.0"

[lib]
name = "ail_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ail-ide"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ail-ui-bridge = { path = "../../crates/ail-ui-bridge", features = ["tauri-commands", "z3-verify", "embeddings"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
